src/ui/snapshots/dtop__ui__ui_tests__tests__action_menu_enabled.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X-alpha - 1 containers                                                                      '?' help, 'q' quit
                                                                                                                        
ID             Name                                            CPU %   Memory  NetTx/s      NetRx/s      Created ▼      
abc123456789 ▶ nginx                                            25.5%   45.2%       1.0· KB      2.0· KB 2 hours ago    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                        ┌─────── Actions: nginx (local) ───────┐                                        
                                        │>  >_  Shell                          │                                        
                                        │   ■  Stop                            │                                        
                                        │   ↻  Restart                         │                                        
                                        │   ✕  Remove                          │                                        
                                        │                                      │                                        
                                        │                                      │                                        
                                        │                                      │                                        
                                        │ ↑/↓: Navigate  Enter: Execute  Esc/← │                                        
                                        └──────────────────────────────────────┘
