src/ui/snapshots/dtop__ui__ui_tests__tests__connection_error_notification.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 1 containers ('?' for help, 'q' to quit)                           ┌─────────────────────────────────────────────────────────┐
                                                                                 │✗ user@server1: Failed to connect: Connection refused    │
  ID             Name             CPU %                        Memory %          └─────────────────────────────────────────────────────────┘
                                                                                                                                            
  abc123456789 ▶ nginx            ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  25.5%  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ 431M/954M    1.0KB/s      2.0KB/s      2 hours ago
