src/ui/snapshots/dtop__ui__ui_tests__tests__empty_container_list.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X-alpha - 0 containers                                                  '?' help, 'q' quit
                                                                                                    
ID             Name                        CPU %   Memory  NetTx/s      NetRx/s      Created ▼
