src/ui/snapshots/dtop__ui__ui_tests__tests__help_popup_enabled.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X-alpha - 1 containers                                                                      '?' help, 'q' quit
                                                                                                                        
ID             Name                                            CPU %   Memory  NetTx/s      NetRx/s      Created ▼      
abc123456789 ▶ nginx                                            25.5%   45.2%       1.0· KB      2.0· KB 2 hours ago    
                                                                                                                        
                                                                                                                        
                                                                                                                        
            ┌─────────────────────────────── Help - Press ? or ESC to close ───────────────────────────────┐            
            │                                                                                              │            
            │                                                                                              │            
            │ Navigation                                                                                   │            
            │   ↑/↓, j/k    Navigate/scroll (1 line)    →/l    View logs      ←/h    Exit logs             │            
            │   Enter       Action menu                 Esc    Close menu     ?      Toggle help           │            
            │   a           Show all containers         /      Filter         o      Open Dozzle           │            
            │                                                                                              │            
            │ Log View Scrolling                                                                           │            
            │   g/G         Top/Bottom       Ctrl+U, b       Page up        Ctrl+D, Space   Page down      │            
            │                                                                                              │            
            │ Sorting                                                                                      │            
            │   u/U         Uptime       n/N         Name           c/C             CPU                    │            
            │   m/M         Memory       s           Cycle          (press again to toggle asc/desc)       │            
            └──────────────────────────────────────────────────────────────────────────────────────────────┘
