src/ui/snapshots/dtop__ui__ui_tests__tests__high_resource_usage.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X-alpha - 3 containers                                                                      '?' help, 'q' quit
                                                                                                                        
ID             Name                                            CPU %   Memory  NetTx/s      NetRx/s      Created ▼      
low12345678  ▶ low-usage                                        15.0%   20.0%        100· B       200· B 2 hours ago    
med12345678  ▶ medium-usage                                     55.0%   65.0%    1000.0· KB     1.95· MB 2 hours ago    
high12345678 ▶ high-usage                                       95.0%   99.0%    100.00· MB   200.00· MB 2 hours ago
