src/ui/snapshots/dtop__ui__ui_tests__tests__single_host_container_list.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 3 containers                                                                            '?' help, 'q' quit
                                                                                                                        
ID             Name                                            CPU %   Memory  NetTx/s      NetRx/s      Created ▼      
abc123456789 ▶ nginx                                            25.5%   45.2%       1.0· KB      2.0· KB 2 hours ago    
def987654321 ▶ postgres                                         65.8%   78.3%       5.0· KB     10.0· KB 2 hours ago    
ghi111222333 ▶ redis                                            15.2%   30.5%        512· B      1.0· KB 2 hours ago
