src/ui/snapshots/dtop__ui__ui_tests__tests__wide_terminal_with_progress_bars.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 1 containers ('?' for help, 'q' to quit)                                                                                                
                                                                                                                                                      
  ID             Name                       CPU %                        Memory %                          Net TX       Net RX       Created ▼        
                                                                                                                                                      
  abc123456789 ▶ nginx                      ⡀⠀⠀⠀⠀⡀⠀⠀⠀⠀⡀⠀⠀⠀⠀⡀⠀⠀⠀⠀  45.5%  ⡀⠀⠀⠀⠀⡀⠀⠀⠀⠀⡀⠀⠀⠀⠀⡀⠀⠀⠀⠀ 594M/954M    1.0KB/s      2.0KB/s      2 hours ago
